# ocaml-c-cryptography

./: .gitignore
aes/: .gitignore  BENCHMARK.md
aes-128/: README.md
aes-128/c/: aes_manual.c  aes_manual.h  benchmark_manual.c
aes-128/ocaml/: aes_manual.mli  dune
aes-128/scripts/: run_aes_manual_c.sh  run_aes_manual_ocaml.sh
aes-ni/: .gitignore  BENCHMARK.md  README.md
aes-ni/benchmarks/: generate_inputs.py
aes-ni/c/: aesni.c  aesni.h  benchmark_aesni.c
aes-ni/oxcaml/: aesni.ml  aesni_stubs.c  benchmark_aesni.ml  dune
aes-ni/scripts/: run_aesni_c.sh  run_aesni_ocaml.sh  run_aesni_oxcaml_simd.sh
aes/ocaml/: aes_manual.ml  benchmark_manual.ml
benchmarks/: aes_benchmark.md  xor_benchmark.md
c/: Makefile  aes.c  aes.h  benchmark_aes.c  xor  xor_cipher.c
chacha20/: .gitignore
chacha20/c/: benchmark_chacha20.c  chacha20.c  chacha20.h
chacha20/c_simd/: Makefile  benchmark_chacha20_simd.c  chacha20_simd.c  chacha20_simd.h
chacha20/ocaml/: benchmark_chacha20.ml  chacha20.ml  dune  dune-project
chacha20/oxcaml_simd/: benchmark_chacha20_simd.ml  chacha20_simd.ml  chacha20_simd_tests.ml  dune  simd_stubs.c
chacha20/scripts/: run_chacha20_c.sh  run_chacha20_c_simd.sh  run_chacha20_ocaml.sh  run_chacha20_oxcaml_simd.sh
ocaml/: aes_cryptokit.ml  dune  xor_cipher.ml  xor_ocaml
reports/: graphs.py  report.md
rijndael/: .gitignore  ANALYSIS.md  BENCHMARK.md  BENCHMARK_FINAL_OPT.md  BENCHMARK_OPT.md  README.md
rijndael/c/: benchmark_rijndael.c  rijndael-alg-fst.c  rijndael-alg-fst.h
xor/: .gitignore  BENCHMARK.md  README.md
xor/c/: benchmark.c  (+3 more)
(+55 files in other folders)
